--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
         
     </header>
 
+    <section class="socios">
+        <h1>Sócios Torcedores</h1>
+        <br><br>
+        <p>Rômulo</p>
+        <img class="foto-romulo"src="romulo.png" alt="foto-romulo">
+        <a href="https://github.com/romulopena"><img src="github-icon.png" width="5%" alt="github"></a>
+    </section>
+
     
 
 </body>
