--- a/index.html
+++ b/index.html
@@ -24,9 +24,23 @@
     <section class="socios">
         <h1>Sócios Torcedores</h1>
         <br><br>
-        <p>Rômulo</p>
-        <img class="foto-romulo"src="romulo.png" alt="foto-romulo">
-        <a href="https://github.com/romulopena"><img src="github-icon.png" width="5%" alt="github"></a>
+        
+        <p class="nomes">Rômulo</p>
+        <div><img class="foto-romulo"src="romulo.png" alt="foto-romulo">
+                <a href="https://github.com/romulopena">
+                <div><img class="git"src="github-icon.png" alt="github"></div></a>
+        </div>
+
+        <p class="nomes">Augusto</p>
+        <div><img class="foto-augusto"src="augusto.png" alt="foto-augusto">
+                <a href="https://github.com/romulopena">
+                <div><img class="git"src="github-icon.png" alt="github"></a></div>
+        </div>
+        <p class="nomes">Gilmar</p>
+        <div><img class="foto-gilmar"src="gilmar.png" alt="foto-gilmar">
+            <a href="https://github.com/romulopena"></a>
+            <div><img class="git"src="github-icon.png" alt="github"></div>
+        </div>    
     </section>
 
     
