--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 
     <section class="socios">
         <h1>Sócios Torcedores</h1>
-        <br><br>
+        <br><br><br>
         
         <p class="nomes">Rômulo</p>
         <div><img class="foto-romulo"src="romulo.png" alt="foto-romulo">
                 <a href="https://github.com/romulopena">
-                <div><img class="git"src="github-icon.png" alt="github"></div></a>
+                <img class="git"src="github-icon.png" alt="github"></a>
         </div>
 
         <p class="nomes">Augusto</p>
@@ -40,7 +40,8 @@
         <div><img class="foto-gilmar"src="gilmar.png" alt="foto-gilmar">
             <a href="https://github.com/romulopena"></a>
             <div><img class="git"src="github-icon.png" alt="github"></div>
-        </div>    
+        </div>
+
     </section>
 
     
