--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
 
     <section class="socios">
-        <h1>Sócios Torcedores</h1>
+        <h2 class="socios-torcedores">Sócios Torcedores</h2>
         <br><br><br>
         
         <p class="nomes">Rômulo</p>
