section socios e historia

--- a/index.html
+++ b/index.html
@@ -21,25 +21,34 @@
         
     </header>
 
+    <section  class="historia">
+        <h2 class="">História do Clube</h2>
+        <p class="paragrafo-historia">História do time, registrada no parágrafo 1</p>
+        <p class="paragrafo-historia">História do time, registrada no parágrafo 2</p>
+
+    </section>
     <section class="socios">
         <h2 class="socios-torcedores">Sócios Torcedores</h2>
         <br><br><br>
         
         <p class="nomes">Rômulo</p>
-        <div><img class="foto-romulo"src="romulo.png" alt="foto-romulo">
+        <div>
+            <img class="foto-romulo" src="romulo.png" alt="foto-romulo">
                 <a href="https://github.com/romulopena">
-                <img class="git"src="github-icon.png" alt="github"></a>
+                    <img class="git" src="github-icon.png" alt="github"></a>
         </div>
 
         <p class="nomes">Augusto</p>
-        <div><img class="foto-augusto"src="augusto.png" alt="foto-augusto">
+        <div>
+            <img class="foto-augusto" src="augusto.png" alt="foto-augusto">
                 <a href="https://github.com/romulopena">
-                <div><img class="git"src="github-icon.png" alt="github"></a></div>
+                    <img class="git" src="github-icon.png" alt="github"></a>
         </div>
         <p class="nomes">Gilmar</p>
-        <div><img class="foto-gilmar"src="gilmar.png" alt="foto-gilmar">
-            <a href="https://github.com/romulopena"></a>
-            <div><img class="git"src="github-icon.png" alt="github"></div>
+        <div>
+            <img class="foto-gilmar" src="gilmar.png" alt="foto-gilmar">
+                <a href="https://github.com/romulopena"></a>
+                    <img class="git" src="github-icon.png" alt="github"></div>
         </div>
 
     </section>
