--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
     <section  class="historia">
         <h2 class="">História do Clube</h2>
-        <p class="paragrafo-historia">História do time, registrada no parágrafo 1</p>
-        <p class="paragrafo-historia">História do time, registrada no parágrafo 2</p>
+        <p class="paragrafo-historia">O clube do Remo é um time do Estado do Pará que foi fundado em 2005. Seu primeiro nome foi Clube de Periçá.</p>
+        <p class="paragrafo-historia">O clube é considerado o maior time da região norte, pois sua torcida é a mais apaixonada de todas.</p>
     </section>
     
     <section class="socios">
